<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2016 Google Inc.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="title">chiara-select2speak</string>
    <string name="description">
        "chiara-select2speak" is a service to read aloud text on the screen, to ease access for users with reading difficulties.\n\n
        The service overlays on top of visible content, and allows users to select a screen area and read aloud the text inside it.\n
        This service is inspired by the "Android Select to Speak" and builds additional functionalities on top of it.
        The latter can not read text not directly exposed to the Android operating system (e.g. text inside apps, images, and videogames).\n
        "chiara-select2speak" is specifically developed to enable recognizing (and reading-aloud) also such text.
    </string>
    <string name="start">Start</string>
    <string name="replay">Replay last text</string>
    <string name="stop">Stop</string>

    <string name="screenshot_service_title">Chiara Screenshot Service</string>
    <string name="screenshot_service_text">Capturing screen...</string>
    <string name="screenshot_channel_name">Media Projection Service Channel</string>

    <string name="settings_description">To use this app, you must enable the "chiara-select2speak" service under Accessibility settings > Installed apps > "chiara-select2speak"</string>
    <string name="open_accessibility_settings">Open Accessibility Settings</string>
    <string name="media_volume_description">To hear the output of this app, the Android \"Media\" volume must be &gt; 0</string>
    <string name="open_volume_settings">Open Volume Settings</string>
</resources>
